@@ -17,11 +17,13 @@ UNVERSIONED
 VERSION 6.2.0
 -------------
 
-- **Remove remaining Boost dependencies / move to C++11 (AB)**
+- **DGrell configure bugfix**
 
-   Only remaining use is multiarray: replace with Martin's array/SSE code
 
-   Check that unique_ptr and shared_ptr semantics (e.g. ptr-populating code) work as intended.
+- **Check LHAGlue getthresholdm_ etc.**
+
+
+- **Remove CompositePDF**
 
 
 - **New Fortran API**
@@ -34,14 +36,6 @@ VERSION 6.2.0
 
    Requests: way to get LHAPDF ID from current set/PDF. Arbitrary PIDs.
 
-
-- **Provide a single-string-arg version of lookupPDF**
-
-   Needs the signature of the function(s) for PDF string decoding to be final
-   before exposing in the API; it's currently in an anon namespace in Factories.cc.
-
-
-- **Check LHAGlue getthresholdm_ etc.**
 
 
 VERSION 6.2.1
